# Tenna-Desktop-Buddy

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
src/: LINUX.cpp  LINUX.hpp  animator.cpp  animator.hpp  dialogue.cpp  dialogue.hpp  intro.cpp  intro.hpp  main.cpp  main_linux.cpp  main_windows.cpp  menu.cpp  menu.hpp  resources.cpp  resources.hpp
